--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "build": "node src/index.js"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "dotenv": "^17.2.3"
   },
   "dependencies": {
-    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "morgan": "^1.10.1",
     "pg": "^8.16.3"
   }
 }
