--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
+    "resetpopulate": "node src/scripts/migrations.js",
     "build": "node src/index.js"
   },
   "devDependencies": {
