--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "build": "node src/index.js"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "nodemon": "^3.1.10"
   },
   "dependencies": {
     "express": "^5.1.0",
-    "morgan": "^1.10.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "winston": "^3.18.3"
   }
 }
