--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "method-override": "^3.0.0",
     "pg": "^8.16.3",
     "winston": "^3.18.3"
   }
