--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "dotenv": "^17.2.3",
+    "http-proxy-node16": "^1.0.6",
     "nodemon": "^3.1.10"
   },
   "dependencies": {
