--- a/package.json
+++ b/package.json
@@ -5,17 +5,13 @@
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon --trace-warnings src/index.js",
-    "resetpopulate": "node src/scripts/migrations.js"
-  },
+  "main": "api/index.js",
   "devDependencies": {
     "dotenv": "^17.2.3",
-    "http-proxy-node16": "^1.0.6",
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@vercel/functions": "^3.3.2",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "compression": "^1.8.1",
