--- a/vercel.json
+++ b/vercel.json
@@ -22,7 +22,7 @@
                 "Access-Control-Allow-Origin": "*",
                 "Access-Control-Allow-Methods": "GET, POST, PUT , PATCH , DELETE, OPTIONS",
                 "Access-Control-Allow-Headers": "Content-Type, Authorization",
-                "Access-Control-Allow-Credentials": "true"
+                "Access-Control-Allow-Credentials": true
             }
         }
     ]
