--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "formidable": "^2.1.5",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "multer": "^2.0.2",
