--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "resetpopulate": "node api/scripts/migrations.js --env-file=.env",
+    "resetpopulate": "node src/scripts/migrations.js --env-file=.env",
     "dev": "nodemon --env-file=.env api/index.js "
   },
   "dependencies": {
