--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "type": "commonjs",
   "main": "api/index.js",
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "dotenv": "^17.2.3",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
     "nodemon": "^3.1.10"
   },
   "scripts": {
